--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,6 @@
  ENV PYTHONDONTWRITEBYTECODE=1 \
      PYTHONUNBUFFERED=1
 
- RUN apt-get update && apt-get install -y build-essential libpq-dev && rm -rf /var/lib/apt/lists/*
 
  COPY backend/requirements.txt /app/requirements.txt
  RUN pip install --no-cache-dir -r /app/requirements.txt
@@ -13,6 +12,6 @@
  COPY backend/app /app/app
 
  EXPOSE 8000
- CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+ CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
 
