--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,4 +11,8 @@ httpx==0.27.2
 orjson==3.10.7
 google-genai>=0.2.0
 requests==2.32.3
+python-jose[cryptography]==3.3.0
+passlib[argon2]==1.7.4
+python-multipart==0.0.9
+email-validator==2.1.0
 
