--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   api:
     build:
@@ -16,6 +14,8 @@ services:
         condition: service_healthy
     ports:
       - "8000:8000"
+    volumes:
+      - ./backend/app:/app/app
     networks:
       - kyp
 
@@ -56,8 +56,8 @@ services:
       - NEO4J_AUTH=neo4j/neo4jpassword
       - NEO4J_dbms_security_procedures_unrestricted=apoc.*
     ports:
-      - "7474:7474"
-      - "7687:7687"
+      - "7300:7474"
+      - "7350:7687"
     volumes:
       - neo4jdata:/data
     healthcheck:
